# music-visualiser-tauri

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  python_tesing.ipynb  tauri.conf.json
src-tauri/music-visualizer-tauri-macros/: Cargo.toml
src-tauri/music-visualizer-tauri-macros/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/lib/components/: TdCanvas.svelte
src/routes/: +page.svelte
