[package]
name = "music-visualizer-tauri-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "music_visualizer_tauri_macros"
path = "src/lib.rs"
proc-macro = true


[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.71"
